--- a/navegacion/header.html
+++ b/navegacion/header.html
@@ -20,7 +20,7 @@
 <nav id="navegacion">
 
   
-        <a href="#"> <img src="/media/bandera/android-chrome-512x512.png" width="50px" height="50px" alt="bandera"></a>
+        <a href="#"> <img src="/media/logo0.png" width="50px" height="50px" alt="bandera"></a>
 
 
 
