cambio de estilo

--- a/navegacion/header.html
+++ b/navegacion/header.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" type="text/css" href="/style/style1.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="icon" href="/media/favicon_io/favicon.png">
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 
 
 
@@ -26,11 +27,11 @@
 
     <ul class="nav">
 
-        <li class="nav_items"> <a href="/pages/home.php"> HOME</a></li>
-        <li class="nav_items"> <a href="/pages/surfcity.php"> SURFCITY</a></li>
-        <li class="nav_items"> <a href="/pages/volcan.php"> VOLCANO</a></li>
-        <li class="nav_items"> <a href="/pages/parque.php"> PARK</a></li>
-        <li class="nav_items"> <a href="/pages/officialwebsites.php"> OFFICIAL WEBSITES</a></li>
+        <li class="nav_items"> <a href="/pages/home.php"> Home</a></li>
+        <li class="nav_items"> <a href="/pages/surfcity.php"> Surfcity</a></li>
+        <li class="nav_items"> <a href="/pages/volcan.php"> Volcano</a></li>
+        <li class="nav_items"> <a href="/pages/parque.php"> Park</a></li>
+        <li class="nav_items"> <a href="/pages/officialwebsites.php"> Officialwebsites</a></li>
 
     </ul>
     
