--- a/navegacion/officialwebsites.html
+++ b/navegacion/officialwebsites.html
@@ -7,6 +7,7 @@
     <title>TurismoSv</title>
     <link rel="stylesheet" type="text/css" href="/style/style1.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 
     
 
@@ -21,14 +22,13 @@
     <div class="cabecera">
 
         <img src="/media/turismo/volcano1.jpg" > 
-        <div class="texto_encima"><br><br><br><br> El Salvador <br> 2023</div>
+        <div class="texto_encima"><br><br><br><br> Paginas Oficiales de El Salvador <br> 2023</div>
         
     </div>
 
 
 </header>
 
-<h3 class="titulolinks"> Paginas Oficiales de El Salvador</h3>
 
 <section>
 
