--- a/navegacion/parque.html
+++ b/navegacion/parque.html
@@ -7,6 +7,7 @@
     <title>TurismoSv</title>
     <link rel="stylesheet" type="text/css" href="/style/style1.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 
     
     
