otimizando carga de pagina

--- a/navegacion/aside.html
+++ b/navegacion/aside.html
@@ -17,6 +17,7 @@
       allowfullscreen=""
       loading="lazy"
       referrerpolicy="no-referrer-when-downgrade"
+      loading="lazy"
     ></iframe>
   </aside>
 </html>
