--- a/navegacion/home.html
+++ b/navegacion/home.html
@@ -15,7 +15,7 @@
   <body>
     <header>
       <div class="cabecera">
-        <img src="/media/playa6.jpg" />
+        <img src="/media/playa6.jpg" loading="lazy"/>
         <div class="texto_encima">
           <br /><br /><br /><br /><br /><br /><br /><br />
           BIENVENIDO AL TURISMO SALVADOREÑO
@@ -27,29 +27,29 @@
       <div class="flex_portada">
         <div class="ac--container acordion">
           <figure>
-            <img src="/media/pais/bitcoin.jpg" alt="img" />
+            <img src="/media/pais/bitcoin.jpg" alt="img" loading="lazy" />
             <input type="radio" name="ac--radio" checked="checked" />
 
             <figure>
               <img
                 src="/media/pais/president2.jpg"
-                alt="El salvador and China"
+                alt="El salvador and China" loading="lazy"
               />
               <input type="radio" name="ac--radio" />
               <figcaption><span>El salvador and China </span></figcaption>
               <figure>
-                <img src="/media/pais/park.jpg" alt="Tourism" />
+                <img src="/media/pais/park.jpg" alt="Tourism" loading="lazy" />
                 <input type="radio" name="ac--radio" />
                 <figcaption><span>Tourism</span></figcaption>
                 <figure>
                   <img
                     src="/media/pais/president4.jpg"
-                    alt="The U.S and El salvador"
+                    alt="The U.S and El salvador" loading="lazy"
                   />
                   <input type="radio" name="ac--radio" />
                   <figcaption><span>The U.S and El salvador</span></figcaption>
                   <figure>
-                    <img src="/media/pais/surfcity.jpg" alt="Surfcity" />
+                    <img src="/media/pais/surfcity.jpg" alt="Surfcity" loading="lazy" />
                     <input type="radio" name="ac--radio" />
                     <figcaption><span>Surfcity</span></figcaption>
                   </figure>
@@ -65,26 +65,26 @@
       <div class="flex_portada">
         <div class="ac--container acordion">
           <figure>
-            <img src="/media/controlterritorial/policia0.jpg" alt="img" />
+            <img src="/media/controlterritorial/policia0.jpg" alt="img" loading="lazy"/>
             <input type="radio" name="ac--radio" checked="checked" />
 
             <figure>
               <img
                 src="/media/controlterritorial/policia1.jpg"
-                alt="Increase in security"
+                alt="Increase in security" loading="lazy"
               />
               <input type="radio" name="ac--radio" />
               <figcaption><span>Increase in security </span></figcaption>
               <figure>
                 <img
-                  src="/media/controlterritorial/policia2.jpg"
+                  src="/media/controlterritorial/policia2.jpg" loading="lazy"
                   alt="Inocation in technology"
                 />
                 <input type="radio" name="ac--radio" />
                 <figcaption><span>Inocation in technology</span></figcaption>
                 <figure>
                   <img
-                    src="/media/controlterritorial/policia3.jpg"
+                    src="/media/controlterritorial/policia3.jpg" loading="lazy"
                     alt="The safest country in latin america"
                   />
                   <input type="radio" name="ac--radio" />
@@ -93,7 +93,7 @@
                   </figcaption>
                   <figure>
                     <img
-                      src="/media/controlterritorial/policia4.jpg"
+                      src="/media/controlterritorial/policia4.jpg" loading="lazy"
                       alt="img"
                     />
                     <input type="radio" name="ac--radio" />
@@ -110,33 +110,33 @@
       <div class="flex_portada">
         <div class="ac--container acordion">
           <figure>
-            <img src="/media/turismo/turismo1.jpg" alt="img" />
+            <img src="/media/turismo/turismo1.jpg" alt="img" loading="lazy" />
             <input type="radio" name="ac--radio" checked="checked" />
 
             <figure>
               <img
-                src="/media/turismo/turismo2.jpg"
+                src="/media/turismo/turismo2.jpg" loading="lazy"
                 alt="Archeological ruins"
               />
               <input type="radio" name="ac--radio" />
               <figcaption><span> Archeological ruins </span></figcaption>
               <figure>
                 <img
-                  src="/media/turismo/turismo3.jpg"
+                  src="/media/turismo/turismo3.jpg" loading="lazy"
                   alt="City ​​of san miguel"
                 />
                 <input type="radio" name="ac--radio" />
                 <figcaption><span>City ​of san miguel</span></figcaption>
                 <figure>
                   <img
-                    src="/media/turismo/turismo4.jpg"
+                    src="/media/turismo/turismo4.jpg" loading="lazy"
                     alt="Lake of el salvador"
                   />
                   <input type="radio" name="ac--radio" />
                   <figcaption><span> Lake of el salvador</span></figcaption>
                   <figure>
                     <img
-                      src="/media/turismo/turismo5.jpg"
+                      src="/media/turismo/turismo5.jpg" loading="lazy"
                       alt="Volcano of el salvador"
                     />
                     <input type="radio" name="ac--radio" />
@@ -154,23 +154,23 @@
       <div class="flex_portada">
         <div class="ac--container acordion">
           <figure>
-            <img src="/media/food/food1.jpg" alt="img" />
+            <img src="/media/food/food1.jpg" alt="img" loading="lazy" />
             <input type="radio" name="ac--radio" checked="checked" />
 
             <figure>
-              <img src="/media/food/food2.jpg" alt="Canoe with milk" />
+              <img src="/media/food/food2.jpg" alt="Canoe with milk" loading="lazy" />
               <input type="radio" name="ac--radio" />
               <figcaption><span>Canoe with milk </span></figcaption>
               <figure>
-                <img src="/media/food/food3.jpg" alt="Corn" />
+                <img src="/media/food/food3.jpg" alt="Corn" loading="lazy" />
                 <input type="radio" name="ac--radio" />
                 <figcaption><span>Corn</span></figcaption>
                 <figure>
-                  <img src="/media/food/food4.jpg" alt="Pupusas" />
+                  <img src="/media/food/food4.jpg" alt="Pupusas" loading="lazy" />
                   <input type="radio" name="ac--radio" />
                   <figcaption><span>Pupusas</span></figcaption>
                   <figure>
-                    <img src="/media/food/food5.jpg" alt="Yucca" />
+                    <img src="/media/food/food5.jpg" alt="Yucca" loading="lazy" />
                     <input type="radio" name="ac--radio" />
                     <figcaption><span>Yucca</span></figcaption>
                   </figure>
