--- a/navegacion/officialwebsites.html
+++ b/navegacion/officialwebsites.html
@@ -11,7 +11,7 @@
   <body>
     <header>
       <div class="cabecera">
-        <img src="/media/turismo/volcano1.jpg" />
+        <img src="/media/turismo/volcano1.jpg" loading="lazy" />
         <div class="texto_encima">
           <br /><br /><br /><br />
           Paginas Oficiales de El Salvador <br />
@@ -25,7 +25,7 @@
         <div class="flex_items3" ata-aos="fade-up">
           <figure>
             <a href="https://www.presidencia.gob.sv/#" target="_blank">
-              <img src="/media/links-img/logo2.png" />
+              <img src="/media/links-img/logo2.png" loading="lazy" />
             </a>
 
             <figcaption>Sitio oficial de la precidencia</figcaption>
@@ -35,7 +35,7 @@
         <div class="flex_items3" ata-aos="fade-up">
           <figure>
             <a href="https://www.cultura.gob.sv/" target="_blank">
-              <img src="/media/links-img/cultura.jpg" />
+              <img src="/media/links-img/cultura.jpg" loading="lazy" />
             </a>
 
             <figcaption>Ministerio de cultura</figcaption>
@@ -45,7 +45,7 @@
         <div class="flex_items3" ata-aos="fade-up">
           <figure>
             <a href="http://www.asl.org.sv/" target="_blank">
-              <img src="/media/links-img/academia1.jpg" />
+              <img src="/media/links-img/academia1.jpg" loading="lazy" />
             </a>
 
             <figcaption>Academia de la lengua española</figcaption>
@@ -55,7 +55,7 @@
         <div class="flex_items3" ata-aos="fade-up">
           <figure>
             <a href="http://historiasv.weebly.com/" target="_blank">
-              <img src="/media/links-img/academia2.jpg" />
+              <img src="/media/links-img/academia2.jpg" loading="lazy" />
             </a>
 
             <figcaption>Academia Salvadoreña de la historia</figcaption>
@@ -65,7 +65,7 @@
         <div class="flex_items3" ata-aos="fade-up">
           <figure>
             <a href="http://www.mitur.gob.sv/" target="_blank">
-              <img src="/media/turismo/turismo1.jpg" />
+              <img src="/media/turismo/turismo1.jpg" loading="lazy" />
             </a>
 
             <figcaption>Ministerio de turismo</figcaption>
@@ -75,7 +75,7 @@
         <div class="flex_items3" ata-aos="fade-up">
           <figure>
             <a href="http://marte.org.sv/" target="_blank">
-              <img src="/media/links-img/museo1.jpg" />
+              <img src="/media/links-img/museo1.jpg" loading="lazy" />
             </a>
 
             <figcaption>"Marte" museo de arte de el salvador</figcaption>
@@ -88,7 +88,7 @@
               href="http://www.cultura.gob.sv/museo-de-historia-natural-de-el-salvador/"
               target="_blank"
             >
-              <img src="/media/links-img/museo3.jpg" />
+              <img src="/media/links-img/museo3.jpg" loading="lazy" />
             </a>
 
             <figcaption>Museo de historia natural de El salvador</figcaption>
@@ -98,7 +98,7 @@
         <div class="flex_items3" ata-aos="fade-up">
           <figure>
             <a href="http://www.binaes.gob.sv/" target="_blank">
-              <img src="/media/links-img/biblioteca1.jpg" />
+              <img src="/media/links-img/biblioteca1.jpg" loading="lazy" />
             </a>
 
             <figcaption>Bibleoteca nacional de El salvador</figcaption>
