--- a/navegacion/parque.html
+++ b/navegacion/parque.html
@@ -22,207 +22,207 @@
     <section>
       <div class="flex_container3">
         <div class="flex_items3" data-aos="fade-up">
-          <img src="/media/people/people1.jpg" />
+          <img src="/media/people/people1.jpg" loading="lazy" />
         </div>
 
         <div class="flex_items3" data-aos="fade-up">
-          <img src="/media/people/people6.jpg" />
+          <img src="/media/people/people6.jpg" loading="lazy" />
         </div>
 
         <div class="flex_items3" data-aos="fade-up">
-          <img src="/media/otros/otro12.jpg" />
+          <img src="/media/otros/otro12.jpg" loading="lazy" />
         </div>
 
         <div class="flex_items3" data-aos="fade-up">
-          <img src="/media/otros/otro40.jpg" />
+          <img src="/media/otros/otro40.jpg" loading="lazy" />
         </div>
 
         <div class="flex_items3" data-aos="fade-up">
-          <img src="/media/otros/otro14.jpg" />
+          <img src="/media/otros/otro14.jpg" loading="lazy" />
         </div>
 
         <div class="flex_items3" data-aos="fade-up">
-          <img src="/media/otros/otro15.jpg" />
+          <img src="/media/otros/otro15.jpg" loading="lazy" />
         </div>
 
         <div class="flex_items3" data-aos="fade-up">
-          <img src="/media/otros/otro16.jpg" />
+          <img src="/media/otros/otro16.jpg" loading="lazy" />
         </div>
 
         <div class="flex_items3" data-aos="fade-up">
-          <img src="/media/otros/otro17.jpg" />
+          <img src="/media/otros/otro17.jpg" loading="lazy" />
         </div>
 
         <div class="flex_items3" data-aos="fade-up">
-          <img src="/media/otros/otro18.jpg" />
+          <img src="/media/otros/otro18.jpg" loading="lazy" />
         </div>
 
         <div class="flex_items3" data-aos="fade-up">
-          <img src="/media/otros/otro19.jpg" />
+          <img src="/media/otros/otro19.jpg" loading="lazy" />
         </div>
 
         <div class="flex_items3" data-aos="fade-up">
-          <img src="/media/otros/otro20.jpg" />
+          <img src="/media/otros/otro20.jpg" loading="lazy" />
         </div>
 
         <div class="flex_items3" data-aos="fade-up">
-          <img src="/media/otros/otro21.jpg" />
+          <img src="/media/otros/otro21.jpg" loading="lazy" />
         </div>
 
         <div class="flex_items3" data-aos="fade-up">
-          <img src="/media/otros/otro22.jpg" />
+          <img src="/media/otros/otro22.jpg" loading="lazy" />
         </div>
 
         <div class="flex_items3" data-aos="fade-up">
-          <img src="/media/otros/otro23.jpg" />
+          <img src="/media/otros/otro23.jpg" loading="lazy" />
         </div>
 
         <div class="flex_items3" data-aos="fade-up">
-          <img src="/media/otros/otro59.jpg" />
+          <img src="/media/otros/otro59.jpg" loading="lazy" />
         </div>
 
         <div class="flex_items3" data-aos="fade-up">
-          <img src="/media/otros/otro25.jpg" />
+          <img src="/media/otros/otro25.jpg" loading="lazy"/>
         </div>
 
         <div class="flex_items3" data-aos="fade-up">
-          <img src="/media/otros/otro63.jpg" />
+          <img src="/media/otros/otro63.jpg" loading="lazy" />
         </div>
 
         <div class="flex_items3" data-aos="fade-up">
-          <img src="/media/otros/otro27.jpg" />
+          <img src="/media/otros/otro27.jpg" loading="lazy"/>
         </div>
 
         <div class="flex_items3" data-aos="fade-up">
-          <img src="/media/otros/otro28.jpg" />
+          <img src="/media/otros/otro28.jpg" loading="lazy"/>
         </div>
 
         <div class="flex_items3" data-aos="fade-up">
-          <img src="/media/otros/otro29.jpg" />
+          <img src="/media/otros/otro29.jpg" loading="lazy" />
         </div>
 
         <div class="flex_items3" data-aos="fade-up">
-          <img src="/media/otros/otro30.jpg" />
+          <img src="/media/otros/otro30.jpg" loading="lazy"/>
         </div>
 
         <div class="flex_items3" data-aos="fade-up">
-          <img src="/media/otros/otro31.jpg" />
+          <img src="/media/otros/otro31.jpg" loading="lazy" />
         </div>
 
         <div class="flex_items3" data-aos="fade-up">
-          <img src="/media/otros/otro32.jpg" />
+          <img src="/media/otros/otro32.jpg" loading="lazy"/>
         </div>
 
         <div class="flex_items3" data-aos="fade-up">
-          <img src="/media/otros/otro33.jpg" />
+          <img src="/media/otros/otro33.jpg" loading="lazy"/>
         </div>
 
         <div class="flex_items3" data-aos="fade-up">
-          <img src="/media/otros/otro34.jpg" />
+          <img src="/media/otros/otro34.jpg" loading="lazy"/>
         </div>
 
         <div class="flex_items3" data-aos="fade-up">
-          <img src="/media/otros/otro35.jpg" />
+          <img src="/media/otros/otro35.jpg" loading="lazy"/>
         </div>
 
         <div class="flex_items3" data-aos="fade-up">
-          <img src="/media/otros/otro36.jpg" />
+          <img src="/media/otros/otro36.jpg" loading="lazy"/>
         </div>
 
         <div class="flex_items3" data-aos="fade-up">
-          <img src="/media/otros/otro37.jpg" />
+          <img src="/media/otros/otro37.jpg" loading="lazy"/>
         </div>
 
         <div class="flex_items3" data-aos="fade-up">
-          <img src="/media/otros/otro64.jpg" />
+          <img src="/media/otros/otro64.jpg" loading="lazy"/>
         </div>
 
         <div class="flex_items3" data-aos="fade-up">
-          <img src="/media/otros/otro39.jpg" />
+          <img src="/media/otros/otro39.jpg" loading="lazy"/>
         </div>
 
         <div class="flex_items3" data-aos="fade-up">
-          <img src="/media/otros/otro40.jpg" />
+          <img src="/media/otros/otro40.jpg" loading="lazy"/>
         </div>
 
         <div class="flex_items3" data-aos="fade-up">
-          <img src="/media/otros/otro65.jpg" />
+          <img src="/media/otros/otro65.jpg" loading="lazy"/>
         </div>
 
         <div class="flex_items3" data-aos="fade-up">
-          <img src="/media/otros/otro42.jpg" />
+          <img src="/media/otros/otro42.jpg" loading="lazy"/>
         </div>
 
         <div class="flex_items3" data-aos="fade-up">
-          <img src="/media/otros/otro43.jpg" />
+          <img src="/media/otros/otro43.jpg" loading="lazy"/>
         </div>
 
         <div class="flex_items3" data-aos="fade-up">
-          <img src="/media/otros/otro44.jpg" />
+          <img src="/media/otros/otro44.jpg" loading="lazy"/>
         </div>
 
         <div class="flex_items3" data-aos="fade-up">
-          <img src="/media/otros/otro45.jpg" />
+          <img src="/media/otros/otro45.jpg" loading="lazy"/>
         </div>
 
         <div class="flex_items3" data-aos="fade-up">
-          <img src="/media/otros/otro46.jpg" />
+          <img src="/media/otros/otro46.jpg" loading="lazy"/>
         </div>
 
         <div class="flex_items3" data-aos="fade-up">
-          <img src="/media/otros/otro67.jpg" />
+          <img src="/media/otros/otro67.jpg" loading="lazy"/>
         </div>
 
         <div class="flex_items3" data-aos="fade-up">
-          <img src="/media/otros/otro66.jpg" />
+          <img src="/media/otros/otro66.jpg" loading="lazy"/>
         </div>
 
         <div class="flex_items3" data-aos="fade-up">
-          <img src="/media/otros/otro50.jpg" />
+          <img src="/media/otros/otro50.jpg" loading="lazy"/>
         </div>
 
         <div class="flex_items3" data-aos="fade-up">
-          <img src="/media/otros/otro51.jpg" />
+          <img src="/media/otros/otro51.jpg" loading="lazy"/>
         </div>
 
         <div class="flex_items3" data-aos="fade-up">
-          <img src="/media/otros/otro52.jpg" />
+          <img src="/media/otros/otro52.jpg" loading="lazy"/>
         </div>
 
         <div class="flex_items3" data-aos="fade-up">
-          <img src="/media/otros/otro53.jpg" />
+          <img src="/media/otros/otro53.jpg" loading="lazy"/>
         </div>
 
         <div class="flex_items3" data-aos="fade-up">
-          <img src="/media/otros/otro54.jpg" />
+          <img src="/media/otros/otro54.jpg" loading="lazy"/>
         </div>
 
         <div class="flex_items3" data-aos="fade-up">
-          <img src="/media/otros/otro55.jpg" />
+          <img src="/media/otros/otro55.jpg" loading="lazy"/>
         </div>
 
         <div class="flex_items3" data-aos="fade-up">
-          <img src="/media/otros/otro56.jpg" />
+          <img src="/media/otros/otro56.jpg" loading="lazy"/>
         </div>
 
         <div class="flex_items3" data-aos="fade-up">
-          <img src="/media/otros/otro52.jpg" />
+          <img src="/media/otros/otro52.jpg" loading="lazy"/>
         </div>
 
         <div class="flex_items3" data-aos="fade-up">
-          <img src="/media/people/people2.jpg" />
+          <img src="/media/people/people2.jpg" loading="lazy"/>
         </div>
 
         <div class="flex_items3" data-aos="fade-up">
-          <img src="/media/otros/otro14.jpg" />
+          <img src="/media/otros/otro14.jpg" loading="lazy"/>
         </div>
 
         <div class="flex_items3" data-aos="fade-up">
-          <img src="/media/people/people4.jpg" />
+          <img src="/media/people/people4.jpg" loading="lazy"/>
         </div>
 
         <div class="flex_items3" data-aos="fade-up">
-          <img src="/media/otros/otro61.jpg" />
+          <img src="/media/otros/otro61.jpg" loading="lazy"/>
         </div>
       </div>
     </section>
