--- a/navegacion/volcan.html
+++ b/navegacion/volcan.html
@@ -11,7 +11,7 @@
   <body>
     <header>
       <div class="cabecera">
-        <img src="/media/turismo/volcano2.jpg" />
+        <img src="/media/turismo/volcano2.jpg" loading="lazy"/>
         <div class="texto_encima">
           <br /><br /><br /><br />VOLCANO <br />
           2023
@@ -22,8 +22,8 @@
     <section>
       <div class="flex_container3 container31">
         <div class="flex_items3 item31">
-          <iframe
-            width="1885"
+          <iframe loading="lazy"
+            width="1885" 
             height="965"
             src="https://www.youtube.com/embed/PLCG3jGzP5o"
             title="Top 7 Volcanes Mas Altos de El Salvador | Pool Blue Sv"
@@ -34,7 +34,7 @@
         </div>
 
         <div class="flex_items3 item31">
-          <iframe
+          <iframe loading="lazy"
             width="1885"
             height="965"
             src="https://www.youtube.com/embed/_91zLdMQ_Mc"
@@ -46,7 +46,7 @@
         </div>
 
         <div class="flex_items3 item31">
-          <iframe
+          <iframe loading="lazy"
             width="1885"
             height="965"
             src="https://www.youtube.com/embed/zS6pyRfAxSY"
@@ -58,7 +58,7 @@
         </div>
 
         <div class="flex_items3 item31">
-          <iframe
+          <iframe loading="lazy"
             width="1401"
             height="797"
             src="https://www.youtube.com/embed/mklHdSMjdMg"
@@ -70,7 +70,7 @@
         </div>
 
         <div class="flex_items3 fitems31">
-          <iframe
+          <iframe loading="lazy"
             width="1401"
             height="797"
             src="https://www.youtube.com/embed/78OrJrpD39Y"
