--- a/navegacion/header.html
+++ b/navegacion/header.html
@@ -19,7 +19,7 @@
   <body>
     <nav id="navegacion">
       <a href="#">
-        <img src="/media/logo0.png" width="50px" height="50px" alt="bandera"
+        <img src="/media/logo0.png" width="50px" height="50px" alt="bandera" loading="lazy"
       /></a>
 
       <ul class="nav">
